fix: header structure

--- a/src/style/general.scss
+++ b/src/style/general.scss
@@ -3,3 +3,17 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+// #app {
+//     height: 100%;
+//     width: 100%;
+// }
+
+.mainContainer {
+    width: 65%;
+    margin: auto;
+}
+
+.contImg img {
+    width: 100%;
+}
