--- a/src/style/general.scss
+++ b/src/style/general.scss
@@ -8,6 +8,9 @@
 //     height: 100%;
 //     width: 100%;
 // }
+.containerAll {
+    width: 100%;
+}
 
 .mainContainer {
     width: 65%;
@@ -16,4 +19,8 @@
 
 .contImg img {
     width: 100%;
+}
+
+li {
+    list-style-type: none;
 }
