--- a/src/style/partials/_mixins.scss
+++ b/src/style/partials/_mixins.scss
@@ -18,6 +18,10 @@
         justify-content: space-between;
     }
 
+    @else if($flexa =='spaceAround') {
+        justify-content: space-around;
+    }
+
 
 
 
